app/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/gerhard/kubehuddle:latest@sha256:c379b937cd21a0e3a72ec40a4328447fc376db64a4c4b6bfe2ec5c5e498fded9
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 0.1
              memory: 16Mi
            limits:
              cpu: 0.2
              memory: 32Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: localhost
            periodSeconds: 10
            timeoutSeconds: 9
          startupProbe:
            httpGet:
              path: /
              port: http
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 10
            periodSeconds: 10
